--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
     <meta property="og:title" content="FamilyHub - Your Family's Smart OS" />
     <meta property="og:description" content="The complete family management platform for modern families. Finance, health, tasks, and more in one place." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="FamilyHub - Your Family's Smart OS" />
     <meta name="twitter:description" content="The complete family management platform for modern families" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
